shared/service-aggregator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-aggregator
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: service-aggregator
  template:
    metadata:
      labels:
        app: service-aggregator
    spec:
      serviceAccountName: service-aggregator-service-account
      automountServiceAccountToken: true
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: service-aggregator
          image: cordicdev.azurecr.io/service-aggregator
          ports:
            - containerPort: 80
              name: http
            - containerPort: 443
              name: https
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service-aggregator
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: service-aggregator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-aggregator-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: service-aggregator-ui
  template:
    metadata:
      labels:
        app: service-aggregator-ui
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: service-aggregator-ui
          image: cordicdev.azurecr.io/service-aggregator-ui
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 1m
              memory: 200Mi
            limits:
              cpu: "1"
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: service-aggregator-ui
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: service-aggregator-ui
