shared/service-aggregator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-aggregator
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  tls:
    - hosts:
        - "example.com"
      secretName: tls-secret
  rules:
    - host: "example.com"
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: service-aggregator
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-aggregator-ui
                port:
                  number: 3000
